--- a/src/locale/zh-CN/requestpolicy.dtd
+++ b/src/locale/zh-CN/requestpolicy.dtd
@@ -1,4 +1,4 @@
-<!ENTITY supportRequestPolicy "Support RequestPolicy">
+<!ENTITY supportRequestPolicy "支持 RequestPolicy">
 <!ENTITY prefetchWarning "警告：预取已启用">
 <!ENTITY prefetchInfo "了解有关预取">
 <!ENTITY prefetchDisablingInstructions "禁用预取">
